[package]
name = "json_analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["derive"] }
eyre = "0.6"
walkdir = "2.3"
nom = "7.1"
rayon = "1.5"
